--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="weatherResult"></div>
     </div>
 
-    <script src="script.js"></script>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1V1dRk79rVQr0nJ0FDrJek?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1VEPVuxJfzoglUcT51vDby?utm_source=generator" width="100%" height="500px " frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>    <script src="script.js"></script>
 </body>
 </html>
